# pecha_org_tools

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: CI.yml  publish.yml  python-test.yml
src/pecha_org_categorizer/: config.py  enums.py  extract.py
src/pecha_org_tools/: extract.py  translation.py
tests/extract/: test_extract.py  test_extract_category.py  test_format_category.py  test_get_category.py  test_parse_category.py
tests/extract/data/: expected_bo_categories.json  expected_en_categories.json  input.xlsx
