[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pecha_org_tools"
version = "0.0.1"
authors = [
    { name = "Tsundue", email = "tsundue@esukhia.org" },
    { name = "Tashi Tsering", email = "tashitsering@esukhia.org" }
]
description = "A package to help with data preparation for pecha.org"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "openpyxl >= 3.1.5",
  "urllib3 >= 2.2.3",
  "anthropic == 0.40.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]


[project.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"
