[tool.poetry]
name = "pecha-org-tools"
version = "0.0.1"
description = "A package to help with data preparation for pecha.org"
authors = [
    "Tsundue <tsundue@esukhia.org>",
    "Tashi Tsering <tashitsering@esukhia.org>"
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8"
openpyxl = ">=3.1.5"
urllib3 = ">=2.2.3"
anthropic = "0.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"
